--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class = "container">
           <div class = "about__content">
             <div class="about__img">
-              <img src = "images/about-bg.jpg" alt = "">
+              <img src = "images/about-bg.jpg" alt = "Catherine Doe">
             </div>
             <div class = "about__text">
               <h2>Catherine Doe</h2>
@@ -82,7 +82,7 @@
             <li class = "design__item center">
               <a href="#">
                 <figure class = "design__item__img">
-                  <img src = "images/art-design-1.jpg" alt = "">
+                  <img src = "images/art-design-1.jpg" alt = "Museum filled with artifacts">
                   <span><i class = "far fa-heart design__item__icon"></i> 22</span>
                   <figcaption>Art & Design</figcaption>
                 </figure>
@@ -96,7 +96,7 @@
             <li class = "design__item">
               <a href="#">
                 <figure class = "design__item__img">
-                  <img src = "images/art-design-2.jpg" alt = "">
+                  <img src = "images/art-design-2.jpg" alt = "black and white tree">
                   <span><i class = "far fa-heart design__item__icon"></i> 22</span>
                   <figcaption>Art & Design</figcaption>
                 </figure>
@@ -110,7 +110,7 @@
             <li class = "design__item">
               <a href="#">
                 <figure class = "design__item__img">
-                  <img src = "images/art-design-3.jpg" alt = "">
+                  <img src = "images/art-design-3.jpg" alt = "golden flowers and tree leaves">
                   <span><i class = "far fa-heart design__item__icon"></i> 22</span>
                   <figcaption>Art & Design</figcaption>
                 </figure>
@@ -124,7 +124,7 @@
             <li class = "design__item">
               <a href="#">
                 <figure class = "design__item__img">
-                  <img src = "images/art-design-4.jpg" alt = "">
+                  <img src = "images/art-design-4.jpg" alt = "cabinets on the wall with vases and plants in them">
                   <span><i class = "far fa-heart design__item__icon"></i> 22</span>
                   <figcaption>Art & Design</figcaption>
                 </figure>
@@ -138,7 +138,7 @@
             <li class = "design__item">
               <a href="#">
                 <figure class = "design__item__img">
-                  <img src = "images/art-design-5.jpg" alt = "">
+                  <img src = "images/art-design-5.jpg" alt = "Laptop with design kit in view">
                   <span><i class = "far fa-heart design__item__icon"></i> 22</span>
                   <figcaption>Art & Design</figcaption>
                 </figure>
@@ -152,7 +152,7 @@
             <li class = "design__item">
               <a href="#">
                 <figure class = "design__item__img">
-                  <img src = "images/art-design-6.jpg" alt = "">
+                  <img src = "images/art-design-6.jpg" alt = "hanged photos on the wall">
                   <span><i class = "far fa-heart design__item__icon"></i> 22</span>
                   <figcaption>Art & Design</figcaption>
                 </figure>
@@ -178,7 +178,7 @@
             <!-- item -->
             <article class = "blog__item">
               <div class = "blog__item__img">
-                <img src = "images/blog-p-1.jpg" alt = "">
+                <img src = "images/blog-p-1.jpg" alt = "A bed with a laptop and an open book on top of it">
                 <span class="blog__item__icon"><i class = "far fa-heart icon"></i></span>
               </div>
               <div class = "blog__item__text">
@@ -192,7 +192,7 @@
             <!-- item -->
             <article class = "blog__item">
               <div class = "blog__item__img">
-                <img src = "images/blog-p-2.jpg" alt = "">
+                <img src = "images/blog-p-2.jpg" alt = "A kid with a drawing and the drawing kit is around them">
                 <span class="blog__item__icon"><i class = "far fa-heart icon"></i></span>
               </div>
               <div class = "blog__item__text">
@@ -206,7 +206,7 @@
             <!-- item -->
             <article class = "blog__item">
               <div class = "blog__item__img">
-                <img src = "images/blog-p-3.jpg" alt = "">
+                <img src = "images/blog-p-3.jpg" alt = "A table with some art and toys on top of it">
                 <span class="blog__item__icon"><i class = "far fa-heart icon"></i></span>
               </div>
               <div class = "blog__item__text">
@@ -220,7 +220,7 @@
             <!-- item -->
             <article class = "blog__item">
               <div class = "blog__item__img">
-                <img src = "images/blog-p-4.jpg" alt = "">
+                <img src = "images/blog-p-4.jpg" alt = "A plant on a stool and towels hanged on wall hanger">
                 <span class="blog__item__icon"><i class = "far fa-heart icon"></i></span>
               </div>
               <div class = "blog__item__text">
@@ -234,7 +234,7 @@
             <!-- item -->
             <article class = "blog__item">
               <div class = "blog__item__img">
-                <img src = "images/blog-p-5.jpg" alt = "">
+                <img src = "images/blog-p-5.jpg" alt = "A bed with a laptop and an open book on top of it">
                 <span class="blog__item__icon"><i class = "far fa-heart icon"></i></span>
               </div>
               <div class = "blog__item__text">
@@ -248,7 +248,7 @@
             <!-- item -->
             <article class = "blog__item">
               <div class = "blog__item__img">
-                <img src = "images/blog-p-6.jpg" alt = "">
+                <img src = "images/blog-p-6.jpg" alt = "empty photo frame on the wall and a plant on a table">
                 <span class="blog__item__icon"><i class = "far fa-heart icon"></i></span>
               </div>
               <div class = "blog__item__text">
@@ -282,7 +282,7 @@
           <a href = "#"><i class = "fab fa-pinterest icon"></i></a>
         </li>
       </ul>
-      <small>Art & Design Blog Page &copy; all rights reserved</small>
+      <small class="text-center">Art & Design Blog Page. Built by CodeFlare &copy; all rights reserved</small>
     </footer>
     <!-- end of footer -->
     
